add Test Cases/AppleShootings where I implemented adjusting images; renamed MyApple -> AppleTwinsDiff

--- a/store/AppleTwinsDiff-20231207_230432.html
+++ b/store/AppleTwinsDiff-20231207_230432.html
@@ -128,13 +128,13 @@
     font-style: italic;
 }
 </style> 
-    <title>MyApple</title> 
+    <title>AppleTwinsDiff</title> 
   </head> 
   <body> 
     <div class="container"> 
       <p id="count"><span class="warnings">1</span>w <span class="ignorable">0</span>i <span class="total">1</span>t</p> 
       <div style="display:flex"> 
-        <h4 class="title" style="padding-top:10px">MyApple-20231206_194232</h4> <button style="margin-left:auto" class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingHeader" aria-expanded="false" aria-controls="collapsingHeader">About</button> 
+        <h4 class="title" style="padding-top:10px">AppleTwinsDiff-20231207_230432</h4> <button style="margin-left:auto" class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingHeader" aria-expanded="false" aria-controls="collapsingHeader">About</button> 
       </div> 
       <div id="collapsingHeader" class="collapse header"> 
         <dl> 
@@ -148,7 +148,7 @@
             JobName :
           </dt> 
           <dd>
-            MyApple
+            AppleTwinsDiff
           </dd> 
           <dt>
             Left MaterialList specification
@@ -159,7 +159,7 @@
                 JobTimestamp :
               </dt> 
               <dd>
-                20231206_194226
+                20231207_230425
               </dd> 
               <dt>
                 QueryOnMetadata :
@@ -177,7 +177,7 @@
                 JobTimestamp :
               </dt> 
               <dd>
-                20231206_194230
+                20231207_230429
               </dd> 
               <dt>
                 QueryOnMetadata :
@@ -210,12 +210,11 @@
           <h2 id="heading0" class="accordion-header"> <input class="form-check-input" type="checkbox" id="ignorable0" value="" data-index="0"> <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse0" area-expanded="false" aria-controls="collapse0"> <span class="ratio warning">92.90%</span> <span class="fileType">png</span> <span class="identification">{"step":"01", "description":"resized"}</span> </button> </h2> 
           <div id="collapse0" class="according-collapse collapse" aria-labelledby="heading0" data-bs-parent="#diff-contents"> 
             <div class="accordion-body"> 
-              <div class="show-diff"> 
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#imageModal0">Show diff in Modal</button><!-- Modal to show 3 images: Left/Diff/Right --> 
+              <div class="show-diff"> <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#imageModal0">Show diff in Modal</button><!-- Modal to show 3 images: Left/Diff/Right --> 
                 <div class="modal fade" id="imageModal0" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true"> 
                   <div class="modal-dialog modal-fullscreen"> 
                     <div class="modal-content"> 
-                      <h4 style="margin: 12px 0 0 130px">MyApple-20231206_194232</h4> 
+                      <h4 style="margin: 12px 0 0 130px">AppleTwinsDiff-20231207_230432</h4> 
                       <div class="modal-header"> 
                         <h5 class="modal-title" id="imageModalLabel0"> <span>92.90% png {"step":"01", "description":"resized"}</span> <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> </h5> 
                       </div> 
@@ -223,22 +222,16 @@
                         <div id="carouselControl0" class="carousel slide" data-bs-ride="carousel"> 
                           <div class="carousel-inner"> 
                             <div class="carousel-item"> 
-                              <h3 class="centered">Left (MyApple_ProductionEnv)</h3> 
-                              <div>
-                                <img class="img-fluid border d-block w-75 centered" alt="left" src="MyApple/20231206_194226/objects/a64cccaef5ef32ca8ed2ab56593503f832754363.png"> 
-                              </div>
+                              <h3 class="centered">Left (AppleTwinsDiff_ProductionEnv)</h3> 
+                              <img class="img-fluid border d-block w-75 centered" alt="left" src="AppleTwinsDiff/20231207_230425/objects/a64cccaef5ef32ca8ed2ab56593503f832754363.png"> 
                             </div> 
                             <div class="carousel-item active"> 
                               <h3 class="centered">Diff</h3> 
-                              <div>
-                                <img class="img-fluid border d-block w-75 centered" alt="diff" src="MyApple/20231206_194232/objects/5131f0c18394f1da355960f641b78cb6c67f64b6.png"> 
-                              </div>
+                              <img class="img-fluid border d-block w-75 centered" alt="diff" src="AppleTwinsDiff/20231207_230432/objects/5131f0c18394f1da355960f641b78cb6c67f64b6.png"> 
                             </div> 
                             <div class="carousel-item"> 
-                              <h3 class="centered">Right (MyApple_DevelopmentEnv)</h3> 
-                              <div>
-                                <img class="img-fluid border d-block w-75 centered" alt="right" src="MyApple/20231206_194230/objects/d0670ac9c08ee338981a416a1100aba73a351298.png"> 
-                              </div>
+                              <h3 class="centered">Right (AppleTwinsDiff_DevelopmentEnv)</h3> 
+                              <img class="img-fluid border d-block w-75 centered" alt="right" src="AppleTwinsDiff/20231207_230429/objects/d0670ac9c08ee338981a416a1100aba73a351298.png"> 
                             </div> 
                           </div> <button class="carousel-control-prev" type="button" data-bs-target="#carouselControl0" data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span> </button> <button class="carousel-control-next" type="button" data-bs-target="#carouselControl0" data-bs-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="visually-hidden">Next</span> </button> 
                         </div> 
@@ -250,12 +243,12 @@
                 </div> 
               </div> 
               <div class="show-detail"> 
-                <h4>left (MyApple_ProductionEnv) </h4> 
+                <h4>left (AppleTwinsDiff_ProductionEnv) </h4> 
                 <dl class="detail"> 
                   <dt>
                     Material URL
                   </dt> 
-                  <dd> <a href="MyApple/20231206_194226/objects/a64cccaef5ef32ca8ed2ab56593503f832754363.png" target="left">MyApple/20231206_194226/objects/a64cccaef5ef32ca8ed2ab56593503f832754363.png</a> 
+                  <dd> <a href="AppleTwinsDiff/20231207_230425/objects/a64cccaef5ef32ca8ed2ab56593503f832754363.png" target="left">AppleTwinsDiff/20231207_230425/objects/a64cccaef5ef32ca8ed2ab56593503f832754363.png</a> 
                   </dd> 
                   <dt>
                     fileType
@@ -276,12 +269,12 @@
                 </dl> 
               </div> 
               <div class="show-detail"> 
-                <h4>right (MyApple_DevelopmentEnv) </h4> 
+                <h4>right (AppleTwinsDiff_DevelopmentEnv) </h4> 
                 <dl class="detail"> 
                   <dt>
                     Material URL
                   </dt> 
-                  <dd> <a href="MyApple/20231206_194230/objects/d0670ac9c08ee338981a416a1100aba73a351298.png" target="right">MyApple/20231206_194230/objects/d0670ac9c08ee338981a416a1100aba73a351298.png</a> 
+                  <dd> <a href="AppleTwinsDiff/20231207_230429/objects/d0670ac9c08ee338981a416a1100aba73a351298.png" target="right">AppleTwinsDiff/20231207_230429/objects/d0670ac9c08ee338981a416a1100aba73a351298.png</a> 
                   </dd> 
                   <dt>
                     fileType
@@ -307,7 +300,7 @@
                   <dt>
                     Material URL
                   </dt> 
-                  <dd> <a href="MyApple/20231206_194232/objects/5131f0c18394f1da355960f641b78cb6c67f64b6.png" target="diff">MyApple/20231206_194232/objects/5131f0c18394f1da355960f641b78cb6c67f64b6.png</a> 
+                  <dd> <a href="AppleTwinsDiff/20231207_230432/objects/5131f0c18394f1da355960f641b78cb6c67f64b6.png" target="diff">AppleTwinsDiff/20231207_230432/objects/5131f0c18394f1da355960f641b78cb6c67f64b6.png</a> 
                   </dd> 
                   <dt>
                     fileType
@@ -318,7 +311,7 @@
                   <dt>
                     metadata
                   </dt> 
-                  <dd> <span>{</span><span>"category":</span><span>"diff"</span><span>, </span><span>"left":</span><span>"20231206_194226/a64cccaef5ef32ca8ed2ab56593503f832754363"</span><span>, </span><span>"ratio":</span><span>"92.90%"</span><span>, </span><span>"right":</span><span>"20231206_194230/d0670ac9c08ee338981a416a1100aba73a351298"</span><span>}</span> 
+                  <dd> <span>{</span><span>"category":</span><span>"diff"</span><span>, </span><span>"left":</span><span>"20231207_230425/a64cccaef5ef32ca8ed2ab56593503f832754363"</span><span>, </span><span>"ratio":</span><span>"92.90%"</span><span>, </span><span>"right":</span><span>"20231207_230429/d0670ac9c08ee338981a416a1100aba73a351298"</span><span>}</span> 
                   </dd> 
                 </dl> 
               </div> 
@@ -331,7 +324,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js"></script> 
     <script type="text/javascript">
         const model = {
-  "jobName": "MyApple",
+  "jobName": "AppleTwinsDiff",
   "threshold": 3.0,
   "isReadyToReport": true,
   "ignoreMetadataKeys": [
@@ -344,14 +337,14 @@
     "image-width"
   ],
   "materialList0": {
-    "jobTimestamp": "20231206_194226",
+    "jobTimestamp": "20231207_230425",
     "queryOnMetadata": {
       "*": "re:.*"
     },
     "size": 1.0
   },
   "materialList1": {
-    "jobTimestamp": "20231206_194230",
+    "jobTimestamp": "20231207_230429",
     "queryOnMetadata": {
       "*": "re:.*"
     },
@@ -370,8 +363,8 @@
       },
       "identification": "{\"description\":\"resized\", \"step\":\"01\"}",
       "left": {
-        "jobName": "MyApple",
-        "jobTimestamp": "20231206_194226",
+        "jobName": "AppleTwinsDiff",
+        "jobTimestamp": "20231207_230425",
         "id": "a64cccaef5ef32ca8ed2ab56593503f832754363",
         "fileType": "png",
         "metadata": {
@@ -418,12 +411,12 @@
         },
         "identification": "{\"description\":\"resized\", \"image-height\":\"100\", \"image-width\":\"100\", \"step\":\"01\", \"URL.host\":\"kazurayam.github.io\", \"URL.path\":\"/myApple/page2.html\", \"URL.port\":\"80\", \"URL.protocol\":\"https\"}",
         "metadataURL": "https://kazurayam.github.io/myApple/page2.html",
-        "relativeUrl": "MyApple/20231206_194226/objects/a64cccaef5ef32ca8ed2ab56593503f832754363.png",
+        "relativeUrl": "AppleTwinsDiff/20231207_230425/objects/a64cccaef5ef32ca8ed2ab56593503f832754363.png",
         "diffability": "AS_IMAGE"
       },
       "right": {
-        "jobName": "MyApple",
-        "jobTimestamp": "20231206_194230",
+        "jobName": "AppleTwinsDiff",
+        "jobTimestamp": "20231207_230429",
         "id": "d0670ac9c08ee338981a416a1100aba73a351298",
         "fileType": "png",
         "metadata": {
@@ -470,12 +463,12 @@
         },
         "identification": "{\"description\":\"resized\", \"image-height\":\"199\", \"image-width\":\"200\", \"step\":\"01\", \"URL.host\":\"kazurayam.github.io\", \"URL.path\":\"/myApple-alt/page2.html\", \"URL.port\":\"80\", \"URL.protocol\":\"https\"}",
         "metadataURL": "https://kazurayam.github.io/myApple-alt/page2.html",
-        "relativeUrl": "MyApple/20231206_194230/objects/d0670ac9c08ee338981a416a1100aba73a351298.png",
+        "relativeUrl": "AppleTwinsDiff/20231207_230429/objects/d0670ac9c08ee338981a416a1100aba73a351298.png",
         "diffability": "AS_IMAGE"
       },
       "diff": {
-        "jobName": "MyApple",
-        "jobTimestamp": "20231206_194232",
+        "jobName": "AppleTwinsDiff",
+        "jobTimestamp": "20231207_230432",
         "id": "5131f0c18394f1da355960f641b78cb6c67f64b6",
         "fileType": "png",
         "metadata": {
@@ -485,7 +478,7 @@
           },
           "left": {
             "key": "left",
-            "value": "20231206_194226/a64cccaef5ef32ca8ed2ab56593503f832754363"
+            "value": "20231207_230425/a64cccaef5ef32ca8ed2ab56593503f832754363"
           },
           "ratio": {
             "key": "ratio",
@@ -493,11 +486,11 @@
           },
           "right": {
             "key": "right",
-            "value": "20231206_194230/d0670ac9c08ee338981a416a1100aba73a351298"
+            "value": "20231207_230429/d0670ac9c08ee338981a416a1100aba73a351298"
           }
         },
-        "identification": "{\"category\":\"diff\", \"left\":\"20231206_194226/a64cccaef5ef32ca8ed2ab56593503f832754363\", \"ratio\":\"92.90%\", \"right\":\"20231206_194230/d0670ac9c08ee338981a416a1100aba73a351298\"}",
-        "relativeUrl": "MyApple/20231206_194232/objects/5131f0c18394f1da355960f641b78cb6c67f64b6.png",
+        "identification": "{\"category\":\"diff\", \"left\":\"20231207_230425/a64cccaef5ef32ca8ed2ab56593503f832754363\", \"ratio\":\"92.90%\", \"right\":\"20231207_230429/d0670ac9c08ee338981a416a1100aba73a351298\"}",
+        "relativeUrl": "AppleTwinsDiff/20231207_230432/objects/5131f0c18394f1da355960f641b78cb6c67f64b6.png",
         "diffability": "AS_IMAGE"
       }
     }
@@ -505,8 +498,8 @@
   "countWarning": 1.0,
   "countIgnorable": 0.0,
   "countTotal": 1.0,
-  "labelLeft": "MyApple_ProductionEnv",
-  "labelRight": "MyApple_DevelopmentEnv"
+  "labelLeft": "AppleTwinsDiff_ProductionEnv",
+  "labelRight": "AppleTwinsDiff_DevelopmentEnv"
 };
     </script> 
     <script type="text/javascript">/* onLoad driven by jQuery */
@@ -951,48 +944,6 @@ function getWithExpiry(key) {
   ]
 }
  */
-</script>
-  <script type="text/javascript">
-/*
- * ths function adjusts the width of an img element
- */
-function adjustImgWidth() {
-  // the width of browser window = width of <body> element
-  let bodyWidth = document.getElementsByTagName('body')[0].clientWidth;
-  //console.log("bodyWidth=" + bodyWidth);
-  let tights = this.parentElement;
-  let img = new Image();
-  img.src = this.src;     // load the PNG to measure the width
-  //console.log("img.width=" + img.width);
-  if (img.width < bodyWidth * 0.75) {
-    // if the PNG has smaller width than 75% of the window width, 
-    // make the bounding <div> to be tight 
-    // so that the <img> shows the graphics as is = unresized
-    tights.style.width = img.width + "px";
-    tights.style.margin = "0 auto";
-  }
-  // if the PNG has larger width than the window, Bootstrap's img-fluid class
-  // will resize the image to fit in the window.
-}
-  </script>
-  
-  <script type="text/javascript">
-/*
- * registering event handlers that triggers the adjustImgWidth function
- */
-document.addEventListener("DOMContentLoaded", function() {
-  // <div class="modal"> should have event-handler for 'shown.bs.modal' event
-  let modalDivs = document.querySelectorAll('.modal')
-  for (let modalDiv of modalDivs) {
-    $(modalDiv).on('shown.bs.modal', function() {
-      let imgs = modalDiv.querySelectorAll("img.img-fluid");
-      for (let img of imgs) {
-        console.log("adjusting img.src=" + img.src);
-        adjustImgWidth.bind(img)();
-      }
-    });
-  }
-}, false);
-  </script>
+</script>  
   </body>
 </html>
