--- a/store/index.html
+++ b/store/index.html
@@ -192,8 +192,18 @@ th {
         <tbody> 
           <tr> 
             <th scope="row">1</th> 
+            <td><a href="./AppleShootings-20231207_230444.html">AppleShootings-20231207_230444.html</a></td> 
+            <td>20231207_230449</td> 
+          </tr> 
+          <tr> 
+            <th scope="row">2</th> 
+            <td><a href="./AppleTwinsDiff-20231207_230432.html">AppleTwinsDiff-20231207_230432.html</a></td> 
+            <td>20231207_230433</td> 
+          </tr> 
+          <tr> 
+            <th scope="row">3</th> 
             <td><a href="./MyApple-20231206_194232.html">MyApple-20231206_194232.html</a></td> 
-            <td>20231206_194233</td> 
+            <td>20231207_205725</td> 
           </tr> 
         </tbody> 
       </table> 
